manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "admcluster-4aa6"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "admcluster-4aa6"
  template:
    metadata:
      labels:
        app: "admcluster-4aa6"
    spec:
      containers:
        - name: "admcluster-4aa6"
          image: "regatec.azurecr.io/admcluster"
          ports:
          - containerPort: 80
